fixed the layout bug

--- a/weather.css
+++ b/weather.css
@@ -22,8 +22,9 @@ main {
 
 .settings{
     width: 100%;
-    height: 85vh;
+    /* height: 85vh; */
     margin-top: 1em;
+    padding: 30px;  
     background: linear-gradient(200deg, #95cfec, #70CCFA);
     box-shadow: 3px 2px 10px rgba(0, 0, 0, 0.4);
     border-radius: 10px;
@@ -95,7 +96,7 @@ fieldset {
     min-width: -webkit-min-content;
     padding: 30px;
     text-align: center;
-    margin-top: 1 rem;
+    /* margin-top: 1 rem; */
   }
 
   .ghost-input, p {
@@ -149,7 +150,7 @@ fieldset {
 @media (min-width: 480px) {
     .settings{
         width: 375px;
-        height: 80vh;
+        /* min-height: 80vh; */
         margin: 3em auto 1em auto;
     }
 
@@ -163,7 +164,11 @@ fieldset {
 }
 
 @media (min-width: 1200px) {
-   
+    /* .settings{
+        width: 375px;
+        min-height: 80vh;
+        margin: 3em auto 1em auto;
+    } */
 }
 
 
